recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:10: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
    droite()
          ^